--- a/proto/MsgCreateFactory.tmpl
+++ b/proto/MsgCreateFactory.tmpl
@@ -7,14 +7,10 @@ import (
 
 func CreateProtoRequestMessage(cmd int32) (msg proto.Message) {
 	switch cmd {
-    {{range $index, $handler := .}}
-	 {{range $cmd, $message := $handler}}
-    	 case int32({{$cmd}}):
-         		return &protobuf.Cs{{$message}}{}
-            {{end}}
-    	}
-    {{end}}
-
+    {{range $index, $handler := .}} {{if eq $index  0}}{{range $cmd, $message := $handler}}
+           	 case int32({{$cmd}}):
+           	   return &Cs{{$message}}{}
+        {{end}}{{end}} {{end}}
 	default:
 		fmt.Println("CreateProtoRequestMessage not found cmdId:", cmd)
 		return nil
@@ -24,13 +20,11 @@ func CreateProtoRequestMessage(cmd int32) (msg proto.Message) {
 
 func CreateProtoResponseMessage(cmd int32) (msg proto.Message) {
 	switch cmd {
-  {{range $index, $handler := .}}
-	 {{range $cmd, $message := $handler}}
-    	 case int32({{$cmd}}):
-         		return &protobuf.Sc{{$message}}{}
-            {{end}}
-    	}
-    {{end}}
+  {{range $index, $handler := .}} {{if eq $index 1}} {{range $cmd, $message := $handler}}
+           	 case int32({{$cmd}}):
+           	     return &Sc{{$message}}{}
+         {{end}} {{end}}{{end}}
+
 
 	default:
 		fmt.Println("CreateProtoResponseMessage not found cmdId:", cmd)
